[gd_scene load_steps=2 format=3 uid="uid://bkw3h816ak33y"]

[ext_resource type="Script" path="res://load.gd" id="1_at323"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_at323")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Node" type="Node" parent="."]

[node name="Aplus" type="Button" parent="Node"]
offset_left = -432.0
offset_top = 8.0
offset_right = -408.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 25
text = "+"

[node name="Bplus" type="Button" parent="Node"]
offset_left = -48.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 25
text = "+"
metadata/_edit_use_anchors_ = true

[node name="Cplus" type="Button" parent="Node"]
offset_left = 336.0
offset_top = 16.0
offset_right = 360.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 25
text = "+"
metadata/_edit_use_anchors_ = true

[node name="Aminus" type="Button" parent="Node"]
offset_left = -360.0
offset_top = 8.0
offset_right = -336.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 25
text = "-"

[node name="Bminus" type="Button" parent="Node"]
offset_left = 24.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 25
text = "-"
metadata/_edit_use_anchors_ = true

[node name="Cminus" type="Button" parent="Node"]
offset_left = 408.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 25
text = "-"
metadata/_edit_use_anchors_ = true

[node name="A" type="Label" parent="Node"]
offset_left = -448.0
offset_top = 48.0
offset_right = -320.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="B" type="Label" parent="Node"]
offset_left = -64.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C" type="Label" parent="Node"]
offset_left = 320.0
offset_top = 48.0
offset_right = 448.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save" type="Button" parent="."]
offset_left = -192.0
offset_top = -296.0
offset_right = 192.0
offset_bottom = -233.0
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = -192.0
offset_top = -224.0
offset_right = 192.0
offset_bottom = -161.0
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="SaveA" type="Button" parent="."]
offset_left = -456.0
offset_top = -72.0
offset_right = -321.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 40
text = "Save A"

[node name="SaveB" type="Button" parent="."]
offset_left = -64.0
offset_top = -72.0
offset_right = 71.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 40
text = "Save B"

[node name="SaveC" type="Button" parent="."]
offset_left = 320.0
offset_top = -72.0
offset_right = 455.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 40
text = "Save C"

[connection signal="pressed" from="Node/Aplus" to="." method="Aplus"]
[connection signal="pressed" from="Node/Bplus" to="." method="Bplus"]
[connection signal="pressed" from="Node/Cplus" to="." method="Cplus"]
[connection signal="pressed" from="Node/Aminus" to="." method="Aminus"]
[connection signal="pressed" from="Node/Bminus" to="." method="Bminus"]
[connection signal="pressed" from="Node/Cminus" to="." method="Cminus"]
[connection signal="pressed" from="Save" to="." method="_saved"]
[connection signal="pressed" from="Load" to="." method="_load"]
[connection signal="pressed" from="SaveA" to="." method="_saveA"]
[connection signal="pressed" from="SaveB" to="." method="_saveB"]
[connection signal="pressed" from="SaveC" to="." method="_saveC"]
